testsuite/tests/typecheck/should_fail/T18640b.stderr
T18640b.hs:14:10: error: [GHC-83865]
    • Expected kind ‘forall b -> a’, but ‘F1’ has kind ‘forall k -> k’
    • In the type ‘F1’
      In the type family declaration for ‘F3’

